# heresiarch

./: .gitignore  .mcp.json  CLAUDE.md  README.md  agent_notes.json  pyproject.toml
agent_saves/: autosave.json  einherjar_kael.json  zone08_cleared.json
data/abilities/: defensive.yaml  innate.yaml  offensive.yaml  passive.yaml  support.yaml
data/enemies/: archetypes.yaml
data/items/: accessories.yaml  armor.yaml  consumables.yaml  weapons.yaml
data/jobs/: berserker.yaml  einherjar.yaml  martyr.yaml  onmyoji.yaml  sacrist.yaml
data/loot/: archetypes.yaml
data/maps/: shinto_slimes.yaml
data/zones/: shinto_slimes.yaml
design/: abilities.md  agent-guide.md  agent-player-design.md  agent-player-spec.md  combat.md  enemies.md  implementation-plan.md  items-and-equipment.md  jobs.md  meta.md  progression.md  spec.md  stats-and-formulas.md
frontend/: package-lock.json  package.json  tsconfig.node.json
scripts/: screenshot_harness.py
tests/: conftest.py  test_agent_session.py  test_auto_battle.py  test_chunk_d.py  test_chunk_e.py  test_combat.py  test_effect_pipeline.py  test_encounter.py  test_floor_plus.py  test_formulas.py  test_game_loop.py  test_golden_einherjar_v4.py  test_integration.py  test_loot.py  test_macro_solver.py  test_party_management.py  test_policy_snapshot.py  test_policy_validation.py  test_progression.py  test_record_db.py  test_recruitment.py  test_regen_and_charge.py  test_run_driver.py  test_sacrist.py  test_save_load.py  test_scaling.py  test_scrolls.py  test_shop.py  test_solver.py  test_spawning.py  test_zone_navigation.py
(+137 files in other folders)
