[project]
name = "heresiarch"
version = "0.1.0"
description = "A text-based roguelike JRPG. Pick a world, pick a job, descend, build synergy, kill god."
readme = "README.md"
authors = [
    { name = "LuxiaSL", email = "mail.luxia@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "textual>=2.0",
]

[project.scripts]
heresiarch = "heresiarch.tui.app:main"
heresiarch-map = "heresiarch.tools.map_tool:main"
heresiarch-dash = "heresiarch.dashboard.__main__:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
agent = [
    "mcp>=1.0.0",
]
dashboard = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
